--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -21,6 +21,10 @@ a:hover {
   text-decoration: underline;
 }
 
+#hero {
+  scroll-margin-top: 120px;
+}
+
 section {
   scroll-margin-top: 110px;
 }
