--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -21,8 +21,10 @@ a:hover {
   text-decoration: underline;
 }
 
-#hero {
-  scroll-margin-top: 120px;
+@media (max-width: 768px) {
+  .hero-section {
+    padding-top: 120px;
+  }
 }
 
 section {
