--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -32,10 +32,10 @@ section {
 }
 
 .navbar {
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
-  background-color: #ffffffcc;
+
   backdrop-filter: blur(10px);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
