--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -21,18 +21,12 @@ a:hover {
   text-decoration: underline;
 }
 
-@media (max-width: 768px) {
-  .hero-section {
-    padding-top: 120px;
-  }
-}
-
 section {
   scroll-margin-top: 110px;
 }
 
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
 
@@ -124,7 +118,7 @@ section {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding: 2rem 1rem;
+  padding: 10rem 1rem;
 }
 
 /* .hero-title {
